--- a/.env.sample
+++ b/.env.sample
@@ -5,3 +5,4 @@ PG_DATABASE_NAME=postgres
 DATABASE_DOCKER_PORT=5432
 PORT=3005
 CORS_ALLOWED_ORIGINS=http://localhost:3000
+JWT_SECRET=sua_chave_secreta_aqui
