--- a/package.json
+++ b/package.json
@@ -25,8 +25,17 @@
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/jwt": "^11.0.2",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^9.0.0",
     "@prisma/adapter-pg": "^7.4.1",
+    "@types/bcrypt": "^6.0.0",
+    "@types/passport-jwt": "^4.0.1",
+    "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
